# backend_typescript_service/src/routes/routes.ts
@@ -38,8 +38,8 @@ const models: TsoaRoute.Models = {
             "status": {"ref":"TodoStatus","default":"BACKLOG"},
             "duration": {"dataType":"string"},
             "due_date": {"dataType":"datetime"},
-            "created_at": {"dataType":"datetime","default":"2026-01-29T06:39:54.341Z"},
-            "updated_at": {"dataType":"datetime","default":"2026-01-29T06:39:54.341Z"},
+            "created_at": {"dataType":"datetime","default":"2026-01-29T07:21:14.359Z"},
+            "updated_at": {"dataType":"datetime","default":"2026-01-29T07:21:14.359Z"},
             "user": {"dataType":"nestedObjectLiteral","nestedProperties":{"$ref":{"dataType":"string","required":true},"$id":{"ref":"ObjectId","required":true}},"required":true},
         },
         "additionalProperties": false,
